# assets2036rs

./: Pipfile  README.md  placeholder_submodel.json  requirements.txt  submodel_generator.py  test_generated_code.py
assets2036_rs/: .gitignore  Cargo.toml  README.md
assets2036_rs/examples/: asset_consumer.rs  asset_provider.rs
assets2036_rs/src/: communication_client.rs  error.rs  lib.rs  logging.rs
assets2036_rs/tests/: integration_test.rs  tests.rs
assets2036_rs/tests/test_submodels/: simple_prop_sm.json
assets2036py/: assetmanager.py
templates/: base.py.j2  consumer.py.j2  provider.py.j2
test_generated_output/: placeholder_submodel_consumer.py  placeholder_submodel_provider.py
