[package]
name = "assets2036_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rumqttc = { version = "0.21.0", default-features = false }
tokio = { version = "1", features = ["full"] } # Reverted to version "1" and "full" features
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
async-trait = "0.1" # Added
uuid = { version = "1.0", features = ["v4"] } # Added
chrono = { version = "0.4", features = ["serde"] } # Added
reqwest = { version = "0.11", features = ["blocking", "json"] }
url = "2"
